# ElaboratoLaboratioProgrammazione

./: CMakeLists.txt  Counter.cpp  Counter.h  Date.cpp  Date.h  MyClock.cpp  MyClock.h  Observer.h  README.md  Subject.h  Time.cpp  Time.h  TimerDisplay.cpp  TimerDisplay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Test/: ClockTest.cpp  ClockTest.h  ClockTest_main.cpp  CounterTest.cpp  CounterTest.h  CounterTest_main.cpp  DateTest.cpp  DateTest.h  DateTest_main.cpp  DisplayTest.cpp  DisplayTest.h  DisplayTest_main.cpp  Test_main.cpp  TimeTest.cpp  TimeTest.h  TimeTest_main.cpp
